--- a/res_data/work/footer.html
+++ b/res_data/work/footer.html
@@ -1,4 +1,12 @@
-</pre></center>
-<script type='text/javascript' src='/uc/water/scripts/ro_wftr.js'></script>
+			</pre></center>
+			<div id="iftr">
+				<p>Email comments/inquires to: <a href="mailto:resourcemgr@uc.usbr.gov">ResourceMgr@uc.usbr.gov</a></p>
+			</div>
+			<!-- InstanceEndEditable -->
+			<p>&nbsp;</p>
+		</div>
+	</div>
+</div>
 </body>
+<!-- InstanceEnd -->
 </html>
