Jerry W. gave me a new header on 10/27 because the header from yesterday does not appear to be correct.  This new header was given to me on a floppy.  I moved it to the appropriate location and overwrote the old header with backing it up.  Hope that is okay.  Rick.

--- a/res_data/work/header.html
+++ b/res_data/work/header.html
@@ -1,153 +1,99 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.=
-w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns=3D"http://www.w3.org/1999/xhtml"><!-- InstanceBegin template=3D=
-"/Templates/WaterOperations_uc.dwt" codeOutsideHTMLIsLocked=3D"false" -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/WaterOperations_uc.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv=3D"Content-Type" content=3D"text/html; charset=3Diso-8859-=
-1" />
-<meta http-equiv=3D"Content-Language" content=3D"EN" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Language" content="EN" />
 
-<!-- InstanceBeginEditable name=3D"doctitle" -->
-        <title>Bureau of Reclamation - Water Operations Data: Elevation, Content, =
-Inflow & Release for last 40 Days</title>
+<!-- InstanceBeginEditable name="doctitle" -->
+	<title>Bureau of Reclamation - Water Operations Data: Elevation, Content, Inflow & Release for last 40 Days</title>
 <!-- InstanceEndEditable -->
 
-<!-- InstanceBeginEditable name=3D"optional_one" --><!-- InstanceEndEditabl=
-e -->
-<!-- InstanceBeginEditable name=3D"optional_two" --><!-- InstanceEndEditabl=
-e -->
-<!-- InstanceBeginEditable name=3D"optional_three" --><!-- InstanceEndEdita=
-ble -->
+<!-- InstanceBeginEditable name="optional_one" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="optional_two" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="optional_three" --><!-- InstanceEndEditable -->
 
-<!-- InstanceBeginEditable name=3D"optional_four" -->
-        <link rel=3D"stylesheet" href=3D"/uc/water/style/prntmedia.css" type=3D"te=
-xt/css" media=3D"print" />
-        <link rel=3D"stylesheet" href=3D"/uc/water/style/dstatus.css" type=3D"text=
-/css" media=3D"all" />
-        <script type=3D"text/javascript" language=3D"javascript" src=3D"/uc/water/=
-scripts/iNav.js"></script>
+<!-- InstanceBeginEditable name="optional_four" -->
+	<link rel="stylesheet" href="/uc/water/style/prntmedia.css" type="text/css" media="print" />
+	<link rel="stylesheet" href="/uc/water/style/dstatus.css" type="text/css" media="all" />
+	<script type="text/javascript" language="javascript" src="/uc/water/scripts/iNav.js"></script>
 <!-- InstanceEndEditable -->
 
-<!-- InstanceBeginEditable name=3D"meta_data" -->
-        <meta name=3D"description" content=3D"Bureau of Reclamation, Upper Colorad=
-o Region Water Operations Data, Help make us the World's Premier Water Reso=
-urces Manager. We are always striving to provide the latest and most accura=
-te Reservoir information available. Let us know what you like or dislike ab=
-out our information." />
-        <meta name=3D"Keywords" content=3D"Reservoirs, Colorado River Storage Proj=
-ects, Upper Colorado Region, Bureau of Reclamation,Blue Mesa Reservoir, Cry=
-stal Reservoir, Flaming Gorge Reservoir, Fontenelle Reservoir, Lake Powell =
-Reservoir, Morrow Point Reservoir, Navajo Reservoir, Pineview Reservoir, Ri=
-fle Gap Reservoir, Rockport Reservoir, Ridgway Reservoir, Soldier Creek Res=
-ervoir, Scofield Reservoir, Starvation Reservoir, Taylor Park Reservoir, Va=
-llecito Reservoir, Paonia Reservoir, McPhee Reservoir, Lemon Reservoir, Joe=
-'s Valley Reservoir, Jordanelle Reservoir, Echo Reservoir, East Canyon Rese=
-rvoir, Deer Creek Reservoir" />
-        <meta name=3D"author" content=3D"Water Resources Group, Upper Colorado Reg=
-ion" />
-        <meta name=3D"publisher" content=3D"Water Resources Group, Upper Colorado =
-Region" />
-        <meta name=3D"created" content=3D"20040910" />
-        <meta name=3D"revised" content=3D"20040910" />
-        <meta name=3D"Expires" content=3D"Never" />
+<!-- InstanceBeginEditable name="meta_data" -->
+	<meta name="description" content="Bureau of Reclamation, Upper Colorado Region Water Operations Data, Help make us the World's Premier Water Resources Manager. We are always striving to provide the latest and most accurate Reservoir information available. Let us know what you like or dislike about our information." />
+	<meta name="Keywords" content="Reservoirs, Colorado River Storage Projects, Upper Colorado Region, Bureau of Reclamation,Blue Mesa Reservoir, Crystal Reservoir, Flaming Gorge Reservoir, Fontenelle Reservoir, Lake Powell Reservoir, Morrow Point Reservoir, Navajo Reservoir, Pineview Reservoir, Rifle Gap Reservoir, Rockport Reservoir, Ridgway Reservoir, Soldier Creek Reservoir, Scofield Reservoir, Starvation Reservoir, Taylor Park Reservoir, Vallecito Reservoir, Paonia Reservoir, McPhee Reservoir, Lemon Reservoir, Joe's Valley Reservoir, Jordanelle Reservoir, Echo Reservoir, East Canyon Reservoir, Deer Creek Reservoir" />
+	<meta name="author" content="Water Resources Group, Upper Colorado Region" />
+	<meta name="publisher" content="Water Resources Group, Upper Colorado Region" />
+	<meta name="created" content="20040910" />
+	<meta name="revised" content="20040910" />
+	<meta name="Expires" content="Never" />
 <!-- InstanceEndEditable -->
 
-<link href=3D"/uc/stylesheets/dummy.css" rel=3D"stylesheet" type=3D"text/cs=
-s" media=3D"screen" />
-<!-- <link href=3D"/stylesheets/contentStyle.css" rel=3D"stylesheet" type=
-=3D"text/css" media=3D"all" /> -->
-<link href=3D"http://www.usbr.gov/stylesheets/print.css" type=3D"text/css" =
-rel=3D"stylesheet" media=3D"print" />
+<link href="/uc/stylesheets/dummy.css" rel="stylesheet" type="text/css" media="screen" />
+<!-- <link href="/stylesheets/contentStyle.css" rel="stylesheet" type="text/css" media="all" /> -->
+<link href="http://www.usbr.gov/stylesheets/print.css" type="text/css" rel="stylesheet" media="print" />
 
 </head>
-<body onload=3D"init()">
-<a href=3D"#startContent" class=3D"hidden">Go to Content</a>
-<div id=3D"bodyFrame">
-        <!--Begin top navigation and page banner-->
-        <div id=3D"topNav">
-                <div class=3D"left"><a href=3D"http://www.doi.gov/">U.S. Department of th=
-e Interior</a>&nbsp;|&nbsp;<a href=3D"http://www.usbr.gov/">Bureau of Recla=
-mation</a> | <a href=3D"http://www.usbr.gov/uc/">Upper Colorado Region </a>=
-</div>
-                <div class=3D"right"><a href=3D"/uc/aboutus/contactus.html">Contact Us</a=
->&nbsp;|&nbsp;<a href=3D"/uc/sitemap.html">Site Index</a></div>
-        </div>
-        <div id=3D"headContainer"><img src=3D"/uc/images/banner-inter-uc.jpg" alt=
-=3D"Bureau of Reclamation Banner, Upper Colorado Region" width=3D"765" heig=
-ht=3D"75" /></div>
-        <!--End top navigation and page banner-->
+<body onload="init()">
+<a href="#startContent" class="hidden">Go to Content</a>
+<div id="bodyFrame">
+	<!--Begin top navigation and page banner-->
+	<div id="topNav">
+		<div class="left"><a href="http://www.doi.gov/">U.S. Department of the Interior</a>&nbsp;|&nbsp;<a href="http://www.usbr.gov/">Bureau of Reclamation</a> | <a href="http://www.usbr.gov/uc/">Upper Colorado Region </a></div>
+		<div class="right"><a href="/uc/aboutus/contactus.html">Contact Us</a>&nbsp;|&nbsp;<a href="/uc/sitemap.html">Site Index</a></div>
+	</div>
+	<div id="headContainer"><img src="/uc/images/banner-inter-uc.jpg" alt="Bureau of Reclamation Banner, Upper Colorado Region" width="765" height="75" /></div>
+	<!--End top navigation and page banner-->
 
-        <!--Begin left navigation-->
-        <div id=3D"contentBlock">
-                <div id=3D"pageNavigation">
-                        <div id=3D"recSearch"> Search Reclamation
-                                <form id=3D"search" method=3D"get" action=3D"http://websearch.usbr.gov/=
-query.html" name=3D"seek">
-                                        <label for=3D"searchTerm" class=3D"hidden">Search input</label>
-                                        <input type=3D"text" id=3D"searchTerm" name=3D"qt" size=3D"14" />
-                                        <label for=3D"submit" class=3D"hidden">Submit</label>
-                                        <input name=3D"submit" type=3D"image" id=3D"search" src=3D"/images/sea=
-rch.gif" alt=3D"search" />
-                                </form>
-                        </div>
-                        <p><a href=3D"/uc/index.html">Upper Colorado Region Home</a> </p>
-                        <p><a href=3D"/uc/offices/index.html">Area Offices</a></p>
-                        <p><a href=3D"/uc/aboutus/index.html">About Us</a></p>
-                        <p><a href=3D"/uc/progact/index.html">Program &amp; Activities</a></p>
-                        <p></p>
-                        <div id=3D"submenu">
-                                <p class=3D"menuTitle"><a href=3D"/uc/water/index.html">Water Operation=
-s</a></p>
-                                <p><a href=3D"/uc/crsp/GetSiteInfo">Historic Data</a></p>
-                                <p>Operational Data</p>
-                                <p><a href=3D"/uc/water/crsp/cs/index.html">Current Status</a></p>
-                                <p><a href=3D"/uc/water/crsp/studies/index.html">24-Month Study</a></p>
-                                <p><a href=3D"/uc/water/crsp/wg/index.html">Operational Working Groups<=
-/a></p>
-                                <p><a href=3D"/uc/water/notice/index.html">Seasonal Notices</a></p>
-                        </div>
-                        <p><a href=3D"/uc/rm/index.html">Resources Management</a></p>
-                        <p><a href=3D"/uc/envdocs/index.html">Environmental Documents</a></p>
-                        <p></p>=20
-                        <div id=3D"doi_logo" class=3D"doi_logo"><a href=3D"http://www.doi.gov/">=
-<img src=3D"/images/doilogo.gif" alt=3D"U. S. Department of the Interior Lo=
-go" width=3D"74" height=3D"76" /></a><p class=3D"doi_logo"><a href=3D"http:=
-//www.doi.gov/" >U.S. Department<br />of the Interior</a></p></div>
-                </div>
-                <!--End left navigation-->
+	<!--Begin left navigation-->
+	<div id="contentBlock">
+		<div id="pageNavigation">
+			<div id="recSearch"> Search Reclamation
+				<form id="search" method="get" action="http://websearch.usbr.gov/query.html" name="seek">
+					<label for="searchTerm" class="hidden">Search input</label>
+					<input type="text" id="searchTerm" name="qt" size="14" />
+					<label for="submit" class="hidden">Submit</label>
+					<input name="submit" type="image" id="search" src="/images/search.gif" alt="search" />
+				</form>
+			</div>
+			<p><a href="/uc/index.html">Upper Colorado Region Home</a> </p>
+			<p><a href="/uc/offices/index.html">Area Offices</a></p>
+			<p><a href="/uc/aboutus/index.html">About Us</a></p>
+			<p><a href="/uc/progact/index.html">Program &amp; Activities</a></p>
+			<p></p>
+			<div id="submenu">
+				<p class="menuTitle"><a href="/uc/water/index.html">Water Operations</a></p>
+				<p><a href="/uc/crsp/GetSiteInfo">Historic Data</a></p>
+				<p>Operational Data</p>
+				<p><a href="/uc/water/crsp/cs/index.html">Current Status</a></p>
+				<p><a href="/uc/water/crsp/studies/index.html">24-Month Study</a></p>
+				<p><a href="/uc/water/crsp/wg/index.html">Operational Working Groups</a></p>
+				<p><a href="/uc/water/notice/index.html">Seasonal Notices</a></p>
+			</div>
+			<p><a href="/uc/rm/index.html">Resources Management</a></p>
+			<p><a href="/uc/envdocs/index.html">Environmental Documents</a></p>
+			<p></p> 
+			<div id="doi_logo" class="doi_logo"><a href="http://www.doi.gov/"><img src="/images/doilogo.gif" alt="U. S. Department of the Interior Logo" width="74" height="76" /></a><p class="doi_logo"><a href="http://www.doi.gov/" >U.S. Department<br />of the Interior</a></p></div>
+		</div>
+		<!--End left navigation-->
 
-                <div id=3D"horiz_menu_item"><a href=3D"http://www.usbr.gov">Reclamation<s=
-pan style=3D"color: #a7b7d9;">_</span>Home</a> <a href=3D"http://www.usbr.g=
-ov/main/regions.html">Regional<span style=3D"color: #a7b7d9;">_</span>Offic=
-es</a> <a href=3D"http://www.usbr.gov/newsroom/">Newsroom</a> <a href=3D"ht=
-tp://www.usbr.gov/library/">Library</a> <a href=3D"http://www.usbr.gov/data=
-web/">Dataweb</a></div>
+		<div id="horiz_menu_item"><a href="http://www.usbr.gov">Reclamation<span style="color: #a7b7d9;">_</span>Home</a> <a href="http://www.usbr.gov/main/regions.html">Regional<span style="color: #a7b7d9;">_</span>Offices</a> <a href="http://www.usbr.gov/newsroom/">Newsroom</a> <a href="http://www.usbr.gov/library/">Library</a> <a href="http://www.usbr.gov/dataweb/">Dataweb</a></div>
 
-                <!--Begin content area-->
-                <div id=3D"content"><a name=3D"startContent" id=3D"startContent"></a>
-                        <!-- InstanceBeginEditable name=3D"contentRegion" -->
-                        <div id=3D"rsvrs-config">
-                                <ul class=3D"rsvrs-menu-system">
-                                        <li style=3D"display: inline; list-style-type: none; list-style-image:=
- none; list-style-position: outside; position: static;" class=3D"submenu"><=
-a href=3D"/uc/water/index.html" id=3D"rsvrs-themelink" class=3D"ui">Our Fie=
-ld Offices</a>
-                                                <ul class=3D"iNav">
-                                                        <li><a href=3D"/uc/elpaso/index.html" title=3D"Rio Grande Basin: El =
-Paso Office">El Paso</a></li>
-                                                        <li><a href=3D"/uc/albuq/water/index.html" title=3D"San Juan-Chama B=
-asin: Albuquerque Office">Albuquerque</a></li>
-                                                        <li><a href=3D"/uc/wcao/water/index.html" title=3D"Western Colorado =
-Basins: Wester Colorado Office">Western Colorado</a></li>
-                                                        <li><a href=3D"/uc/provo/index.html" title=3D"Upper Colorado Basin: =
-Provo Office">Provo</a></li>
-                                                        <li><a href=3D"/uc/water/index.html" title=3D"Upper Colorado Region =
-Office Water Operations">Water Operations</a></li>
-                                                </ul>
-                                        </li>
-                                </ul>
-                        </div>
-                        <h1>Upper Colorado Region<br /></h1><h1 style=3D"text-align: center;"> W=
-ater Resources Group</h1>
-                        <center><pre>
+		<!--Begin content area-->
+		<div id="content"><a name="startContent" id="startContent"></a>
+			<!-- InstanceBeginEditable name="contentRegion" -->
+			<div id="rsvrs-config">
+				<ul class="rsvrs-menu-system">
+					<li style="display: inline; list-style-type: none; list-style-image: none; list-style-position: outside; position: static;" class="submenu"><a href="/uc/water/index.html" id="rsvrs-themelink" class="ui">Our Field Offices</a>
+						<ul class="iNav">
+							<li><a href="/uc/elpaso/index.html" title="Rio Grande Basin: El Paso Office">El Paso</a></li>
+							<li><a href="/uc/albuq/water/index.html" title="San Juan-Chama Basin: Albuquerque Office">Albuquerque</a></li>
+							<li><a href="/uc/wcao/water/index.html" title="Western Colorado Basins: Wester Colorado Office">Western Colorado</a></li>
+							<li><a href="/uc/provo/index.html" title="Upper Colorado Basin: Provo Office">Provo</a></li>
+							<li><a href="/uc/water/index.html" title="Upper Colorado Region Office Water Operations">Water Operations</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<h1>Upper Colorado Region<br /></h1><h1 style="text-align: center;"> Water Resources Group</h1>
+			<center><pre>
 
