Added /uc to image paths for search.gif and doilogo.gif

--- a/res_data/work/header.html
+++ b/res_data/work/header.html
@@ -52,7 +52,7 @@
 					<label for="searchTerm" class="hidden">Search input</label>
 					<input type="text" id="searchTerm" name="qt" size="14" />
 					<label for="submit" class="hidden">Submit</label>
-					<input name="submit" type="image" id="search" src="/images/search.gif" alt="search" />
+					<input name="submit" type="image" id="search" src="/uc/images/search.gif" alt="search" />
 				</form>
 			</div>
 			<p><a href="/uc/index.html">Upper Colorado Region Home</a> </p>
@@ -72,7 +72,7 @@
 			<p><a href="/uc/rm/index.html">Resources Management</a></p>
 			<p><a href="/uc/envdocs/index.html">Environmental Documents</a></p>
 			<p></p> 
-			<div id="doi_logo" class="doi_logo"><a href="http://www.doi.gov/"><img src="/images/doilogo.gif" alt="U. S. Department of the Interior Logo" width="74" height="76" /></a><p class="doi_logo"><a href="http://www.doi.gov/" >U.S. Department<br />of the Interior</a></p></div>
+			<div id="doi_logo" class="doi_logo"><a href="http://www.doi.gov/"><img src="/uc/images/doilogo.gif" alt="U. S. Department of the Interior Logo" width="74" height="76" /></a><p class="doi_logo"><a href="http://www.doi.gov/" >U.S. Department<br />of the Interior</a></p></div>
 		</div>
 		<!--End left navigation-->
 
