--- a/res_data/work/header.html
+++ b/res_data/work/header.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/WaterOperations_uc.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
@@ -76,7 +77,7 @@
 		</div>
 		<!--End left navigation-->
 
-		<div id="horiz_menu_item"><a href="http://www.usbr.gov">Reclamation<span style="color: #a7b7d9;">_</span>Home</a> <a href="http://www.usbr.gov/main/regions.html">Reclamation<span style="color: #a7b7d9;">_</span>Offices</a> <a href="http://www.usbr.gov/newsroom/">Newsroom</a> <a href="http://www.usbr.gov/library/">Library</a> <a href="http://www.usbr.gov/dataweb/">Dataweb</a></div>
+		<div id="horiz_menu_item"><a href="http://www.usbr.gov">Reclamation<span style="color: #a7b7d9;">_</span>Home</a> <a href="http://www.usbr.gov/main/regions.html">Reclamation<span style="color: #a7b7d9;">_</span>Offices</a> <a href="http://www.usbr.gov/newsroom/">Newsroom</a> <a href="http://www.usbr.gov/library/">Library</a> <a href="http://www.usbr.gov/projects/">Projects & Facilities</a></div>
 
 		<!--Begin content area-->
 		<div id="content"><a name="startContent" id="startContent"></a>
